# IndicatorManagement

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  requirements-dev.txt  requirements-full.txt  requirements.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint.yml  pypi_upload.yml  test-python.yml  test.yml
examples/: app1.py
examples/dynamic_plotting/: BTCUSDT-1m-2021-06-27.csv  app.py  app2.py  app_strategy.py
examples/simple_arithmetic_operation/: app.py
examples/testing_async_performance/: app.py
examples/testing_performance/: app.py  app_async.py  app_sync.py
src/indicator_management/: __init__.py  _types.py  constants.py  errors.py  example.py  graph.py  indicators.py  log.py  orchestrate.py  orchestration.py  plot.py  position.py  settings.py  utils.py
src/indicator_management/indicators/: __init__.py  abc.py  aging.py  base.py  comparisons.py  extra_types.py  financial.py  mathematical.py  raw.py  statistical.py  utils.py
src/indicator_management/indicators/strategy/: __init__.py  exit_conditions.py  strategy.py
tests/: test_indicators.py  test_orchestration.py  test_plot.py  test_settings.py  test_strategy.py
