[metadata]
name = indicator-management
version = 0.0.2
author = McDic
author_email = spongbob9876@naver.com
description = A library to help management of fully customized indicators
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/McDic/IndicatorManagement
project_urls =
    Bug Tracker = https://github.com/McDic/IndicatorManagement/issues
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Intended Audience :: Financial and Insurance Industry
    Natural Language :: English
    Topic :: Office/Business :: Financial
    Topic :: Software Development :: Libraries

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src