[metadata]
name = indicator-management
version = 0.2.0
author = McDic
author_email = spongbob9876@naver.com
description = A library to help management of fully customized indicators
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/McDic/IndicatorManagement
project_urls =
    Bug Tracker = https://github.com/McDic/IndicatorManagement/issues
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Intended Audience :: Financial and Insurance Industry
    Natural Language :: English
    Topic :: Office/Business :: Financial
    Topic :: Software Development :: Libraries

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src

[flake8]
per-file-ignores =
    = __init__.py:F401,F403
max-line-length = 88
extend-ignore = E203

[mypy]
ignore_missing_imports = true
check_untyped_defs = true
